bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:3: error: 'case' expected but '(' found.
    (c,d,true) if (c<0 &&d<0) => return true
    ^PosNeg:4: error: '}' expected but ';' found.
    (c,d,false) if (c<0 || d<0) => return true
^PosNeg:4: error: ';' expected but 'if' found.
    (c,d,false) if (c<0 || d<0) => return true
                ^PosNeg:9: error: eof expected but '}' found.
}
^