bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  (a,b,negative) match {
    (c,d,true) if (c<0 &&d<0) => return true
    (c,d,false) if (c<0 || d<0) => return true
    (_,_,_) =>  return false
  }
}